--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "aggtrade-backend",
   "module": "index.ts",
-  "type": "module",
+  "type": "commonjs",   
+  "scripts": {
+    "build": "tsc",
+  "start": "node dist/index.js"
+},
   "devDependencies": {
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/node": "^24.0.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
+    "ts-node": "^10.9.2",
     "zod": "^3.25.67"
   }
 }
