--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@types/node": "^24.0.7",
+    "axios": "^1.10.0",
+    "bottleneck": "^2.19.5",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "ethers": "^6.14.4",
