feat: 1inch proxy routes detailed profile and equity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["*.ts"] 
+  "include": ["*.ts", "controllers/controllers.ts"] 
 }
