feat: refactored sqrt price one file - price bug, redis error, too many swaps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["*.ts", "controllers/controllers.ts"] 
+  "include": ["*.ts", "src/controllers/controllers.ts", "src/models.ts", "src/index.ts", "src/app.ts", "src/router.ts", "src/redis.ts", "src/mongodb.ts"] 
 }
