feat: feat katana ohlc matches with dexscreener

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "moralis": "^2.27.2",
+    "mysql2": "^3.14.3",
+    "sequelize": "^6.37.7",
     "ts-node": "^10.9.2",
     "zod": "^3.25.67"
   }
