--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.16.1",
     "moralis": "^2.27.2",
     "mysql2": "^3.14.3",
+    "newrelic": "^13.5.0",
     "node-cron": "^4.2.1",
     "sequelize": "^6.37.7",
     "ts-node": "^10.9.2",
