--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "aggtrade-backend",
   "module": "index.ts",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "bot": "bun TvlBot/cli/index.ts",
+    "bot:sushi": "bun run bot -- platform=sushiswap"
   },
   "devDependencies": {
     "@types/bun": "latest",
