feat: tracking, classic swap api

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "newrelic": "^13.5.0",
     "node-cron": "^4.2.1",
     "sequelize": "^6.37.7",
+    "sushi": "^6.2.19",
     "ts-node": "^10.9.2",
     "zod": "^3.25.67"
   }
