--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "bot": "bun TvlBot/cli/index.ts",
     "bot:sushi": "bun run bot -- platform=sushiswap",
-    "bot:limit-order": "bun run src/scripts/runLimitOrderBot.ts"
+    "bot:limit-order": "bun run src/scripts/runLimitOrderBot.ts",
+    "backfill-sushiswap": "bun run src/scripts/backfillSushiswapActivity.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
