--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@morpho-org/blue-sdk": "^5.8.0",
+    "@morpho-org/blue-sdk-viem": "^4.1.2",
+    "@morpho-org/bundler-sdk-viem": "^4.1.2",
+    "@morpho-org/morpho-ts": "^2.4.5",
+    "@morpho-org/simulation-sdk": "^3.2.2",
     "@orbs-network/twap-sdk": "^4.0.92",
     "@types/node": "^24.0.7",
     "axios": "^1.10.0",
